--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
